--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
             <p class="lead">Computer Science Graduate</p>
             <ul class="social-icon">
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/slokaroy1"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="www.linkedin.com/in/sloka-roy"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
             </ul>
