--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
             <p class="lead">Computer Science Graduate</p>
             <ul class="social-icon">
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-slack" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/sloka-roy/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/sholu"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                <li><a href="https://stackoverflow.com/users/8272710/sloka-roy"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/slokaroy1"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/roy_sloka"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div class="profile-img"></div>
@@ -65,11 +65,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>About Me.</h2>
+                    <h2>About Me</h2>
                 </div>
             </div>
             <div class="col-md-12">
                 <p>
+                	Hello World!! <br/>
                     A final-year Computer Science undergraduate student at IP University, Delhi with an interest in Android, Web and Java programming. Seeking for a summer internship to apply my skills in company’s software product.
 
                 </p>
@@ -100,7 +101,7 @@
                     <h3>B.Tech Computer Science and Engineering</h3>
                     <h4>Guru Gobind Singh Indraprastha University</h4>
 
-                    <p>SHASTRI PARK, New Delhi</p>
+                    <p>Shastri Park, New Delhi</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
