--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
             <div class="col-md-12">
                 <p>
                 	Hello World!! <br/>
-                    A final-year Computer Science undergraduate student at IP University, Delhi with an interest in Android, Web and Java programming. Seeking for a summer internship to apply my skills in company’s software product.
-
+                    DUMMY DATA- Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. 
                 </p>
 
                 <p>
@@ -98,15 +97,15 @@
             <div class="col-md-12">
                 <div class="content-item">
                     <small>2014 - 2018</small>
-                    <h3>B.Tech Computer Science and Engineering</h3>
-                    <h4>Guru Gobind Singh Indraprastha University</h4>
+                    <h3>Bachelor of Technology - CSE </h3>
+                    <h4>NIEC, Guru Gobind Singh Indraprastha University</h4>
 
                     <p>Shastri Park, New Delhi</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
                     <small>2013 - 2014</small>
-                    <h3>XII</h3>
+                    <h3>Higher Secondary Certificate - CBSE</h3>
                     <h4>Lal Bahadur Shastri Smarak Javm Senior Secondary School</h4>
 
                     <p>R.K. Puram, New Delhi</p>
@@ -114,7 +113,7 @@
                 <!-- .experience-item -->
                 <div class="content-item">
                     <small>2011 - 2012</small>
-                    <h3>X</h3>
+                    <h3>Secondary School Certificate - CBSE</h3>
                     <h4>Bhavan’s Sawan Public School</h4>
 
                     <p>Bhatti Mines Road, New Delhi</p>
@@ -135,7 +134,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>My Works</h2>
+                    <h2>My Work Areas</h2>
                 </div>
             </div>
         </div>
@@ -147,7 +146,7 @@
                     <h3>Front End Development </h3>
 
                     <p>
-                        Synergistically strategize customer directed resources rather than principle.
+                        Mostly integrated with other projects like Visualforce pages in salesforce or with J2EE
                     </p>
                 </div>
             </div>
@@ -156,7 +155,7 @@
                     <h3>Android Application Development </h3>
 
                     <p>
-                        Quickly repurpose reliable customer service with orthogonal ideas. Competently.
+                        My primary work area
                     </p>
                 </div>
             </div>
@@ -168,7 +167,7 @@
                     <h3>JAVA SE/EE</h3>
 
                     <p>
-                        Interactively myocardinate high standards in initiatives rather than next-generation.
+                        Preferred language for coding DS and Algorithms, have also used it's versions with Android and Web based application
                     </p>
                 </div>
             </div>
@@ -178,7 +177,7 @@
                     <h3>Salesforce</h3>
 
                     <p>
-                        Dynamically initiate client-based convergence vis-a-vis performance based. </p>
+                        Intermediate Knowledge with one full scale app for Banks</p>
                 </div>
             </div>
         </div>
@@ -203,11 +202,11 @@
                 <div class="progress-wrapper">
 
                     <div class="progress-item">
-                        <span class="progress-title">Computer Science (DBMS, OS, CN, DS, JAVA)</span>
+                        <span class="progress-title">Computer Science (DBMS, OS, CN, DS, JAVA, ML, DW, BD)</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 70%"><span class="progress-percent"> 70%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 75%"><span class="progress-percent"> 75%</span>
                             </div>
                         </div>
                         <!-- .progress -->
@@ -403,26 +402,22 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content-item">
-                    <h3>Books</h3>
+                    <h3>Genre: Mystery</h3>
 
-                    <p>Proactively extend market-driven e-tailers rather than enterprise-wide supply chains.
-                        Collaboratively embrace 24/7 processes rather than adaptive users. Seamlessly monetize
-                        alternative e-business.</p>
+                    <p>My love for detective stories started from "The Hardy Boys", that time I was in grade 6th and since then it has just linerly evolved.
+                        I have not limited myself with just reading books (though currently, I am reading You -Caroline Kepnes), I try to follow every popular tv-series and movies based on this genre, also I watch Anime shows like Detective Conan and DeathNote (in Japanese with eng Subs) 
+                          </p>
                 </div>
                 <div class="content-item">
                     <h3>Sports</h3>
 
-                    <p>Assertively grow optimal methodologies after viral technologies. Appropriately develop
-                        frictionless technology for adaptive functionalities. Competently iterate functionalized
-                        networks for best-of-breed services.</p>
+                    <p>My primary outdoor sport is Basketball, I play at shooting guard position and have represented My school and local club in tournaments.	 I also love running half marathons with best timing as 1:48:00 In Indoor sports, I am good at TT and Chess. </p>
 
                 </div>
                 <div class="content-item">
-                    <h3>Art</h3>
+                    <h3>Music</h3>
 
-                    <p>Dramatically utilize superior infomediaries whereas functional core competencies.
-                        Enthusiastically repurpose synergistic vortals for customer directed portals. Interactively
-                        pursue sustainable leadership via.</p>
+                    <p>Music is a part of me and my everyday life. It is one of the most important and powerful things in my life.Listening to music helps me to relax. It also motivates me in most of the times. Instruments that I can play- Tabla, Snare drum (both practiced 4 years in school)</p>
                 </div>
             </div>
         </div>
