--- a/index.html
+++ b/index.html
@@ -71,14 +71,11 @@
             <div class="col-md-12">
                 <p>
                 	Hello World!! <br/>
-                    DUMMY DATA- Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. 
+                    279281
                 </p>
 
                 <p>
-                    Dramatically predominate mission-critical materials and cooperative systems. Holisticly synergize
-                    optimal results through team building "outside the box" thinking. Seamlessly facilitate frictionless
-                    relationships via robust imperatives. Monotonectally brand wireless products and excellent action
-                    items. Monotonectally disintermediate granular alignments via sustainable infomediaries.
+                    As a DevOps Engineer with more than 4 years of experience, I have a strong understanding of software development life cycle (SDLC) and the ability to design, implement, and maintain continuous integration and delivery pipelines. I have a proven track record of collaborating with cross-functional teams to ensure seamless integration of infrastructure and applications, and to improve development processes and workflows.My expertise includes proficiency in tools such as Git, Jenkins, Docker, Kubernetes, and AWS, among others. I possess the skills to automate and streamline development processes, manage and monitor infrastructure, and ensure that applications are highly available, scalable, and performant. Additionally, I am well-versed in scripting languages such as Python, Bash, and Ruby, and have experience with infrastructure as code tools like Terraform and CloudFormation. I am also comfortable working in both Linux and Windows environments. I am dedicated to ensuring that software development processes are optimized for efficiency, speed, and quality. I am a strong communicator, problem-solver, and collaborator who is passionate about staying up-to-date with the latest trends and technologies in DevOps. I am excited to bring my skills and experience to any organization seeking to improve their software development processes and infrastructure.
                 </p>
             </div>
         </div>
