--- a/index.html
+++ b/index.html
@@ -406,25 +406,24 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="content-item">
+                  <h3>Chess</h3>
+
+                  <p>An avid chess player with a strong passion for the game, I have been playing chess since 2nd grade and have achieved a 1500 rating in Blitz on chess.com. </p>
+
+                </div>
+                <div class="content-item">
+                  <h3>Basketball</h3>
+
+                  <p>My primary outdoor sport is Basketball, I play at shooting guard position and have represented My school and local club in tournaments. </p>
+
+                </div>
+                <div class="content-item">
                   <h3>Genre: Mystery</h3>
 
                   <p>My love for detective stories started from "The Hardy Boys", that time I was in grade 6th and since then it has just linerly evolved.
                     I have not limited myself with just reading books (though currently, I am reading You -Caroline Kepnes), I try to follow every popular tv-series and movies based on this genre, also I watch Anime shows like Detective Conan and
                     DeathNote (in Japanese with eng Subs)
                   </p>
-                </div>
-                <div class="content-item">
-                  <h3>Sports</h3>
-
-                  <p>My primary outdoor sport is Basketball, I play at shooting guard position and have represented My school and local club in tournaments. I also love running half marathons with best timing as 1:48:00 In Indoor sports, I am good at
-                    TT and Chess. </p>
-
-                </div>
-                <div class="content-item">
-                  <h3>Music</h3>
-
-                  <p>Music is a part of me and my everyday life. It is one of the most important and powerful things in my life.Listening to music helps me to relax. It also motivates me in most of the times. Instruments that I can play- Tabla, Snare
-                    drum (both practiced 4 years in school)</p>
                 </div>
               </div>
             </div>
