--- a/index.html
+++ b/index.html
@@ -135,6 +135,45 @@
         </section>
         <!-- .section-education -->
 
+        <section class="section-wrapper section-experience">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="section-title">
+                  <h2>Experience</h2>
+                </div>
+              </div>
+            </div>
+            <!--.row-->
+            <div class="row">
+              <div class="col-md-12">
+                <div class="content-item">
+                  <small>Apr 2019 - Oct 2020</small>
+                  <h3>Development of Azure DevOps Marketplace Extensions</h3>
+                  <h4>DevOps Developer, Infosys</h4>
+                  <p>Tools: AWS Device Farm, Siebel Repo Migration, Source to Image Toolkit, Arachni Scanner, Codescan, Node</p>
+                </div>
+                <!-- .experience-item -->
+                <div class="content-item">
+                  <small>Apr 2020 - May 2020</small>
+                  <h3>Development of Cloud Management Portal for displaying Multi-Cloud Usage (Consumption, Pricing and Other Commercial Attribute) for an account.</h3>
+                  <h4>Cloud Developer, Infosys</h4>
+                  <p>Tools: REST API’s of {Azure, GCP, AWS}, Virtual Machine, Angular</p>
+                </div>
+                <!-- .experience-item -->
+                <div class="content-item">
+                  <small>Dec 2019 - Apr 2020</small>
+                  <h3>GitLab Infrastructure Enhancement, Project Migration and Support to Run team on major GitLab Administrative blockers</h3>
+                  <h4>Support and Administration, Client Alstom (Offsite)</h4>
+                  <p>Tools: GitLab, Docker, RHEL On-Prem Server, Python, Git, Prometheus</p>
+                </div>
+                <!-- .experience-item -->
+              </div>
+            </div>
+            <!--.row-->
+          </div>
+          <!-- .container-fluid -->
+
         <section class="section-wrapper portfolio-section gray-bg">
           <div class="container-fluid">
             <div class="row">
