--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                 <p>
                   Hello World!! <br />
                   As a DevOps Engineer with more than 4 years of experience, I have a strong understanding of software development life cycle (SDLC) and the ability to design, implement, and maintain continuous integration and delivery pipelines. I
-                  have a proven track record of collaborating with cross-functional teams to ensure seamless integration of infrastructure and applications, and to improve development processes and workflows.
+                  have a proven track record of collaborating with cross-functional teams to ensure seamless integration of infrastructure and applications, and to improve development processes and workflows.<br />
 
                   My expertise includes proficiency in tools such as Git, Jenkins, Docker, Kubernetes, and AWS, among others. I possess the skills to automate and streamline development processes, manage and monitor infrastructure, and ensure that
-                  applications are highly available, scalable, and performant.
+                  applications are highly available, scalable, and performant.<br />
 
                   Additionally, I am well-versed in scripting languages such as Python, Bash, and Ruby, and have experience with infrastructure as code tools like Terraform and CloudFormation. I am also comfortable working in both Linux and Windows
-                  environments.
+                  environments.<br />
 
                   I am dedicated to ensuring that software development processes are optimized for efficiency, speed, and quality. I am a strong communicator, problem-solver, and collaborator who is passionate about staying up-to-date with the latest
                   trends and technologies in DevOps. I am excited to bring my skills and experience to any organization seeking to improve their software development processes and infrastructure.
@@ -151,12 +151,12 @@
                   <small>Apr 2019 - Oct 2020</small>
                   <h3>DevOps Developer, Infosys</h3>
                   <h4>Development of Azure DevOps Marketplace Extensions</h4>
-                  <p>Tools: AWS Device Farm, Siebel Repo Migration, Source to Image Toolkit, Arachni Scanner, Codescan, Node</p>
-                  <ul>
-                    <li>Developing Custom Azure DevOps of Market place Extension in Node (Typescript)</li>
-                    <li>Extension to be used as build and release tasks</li>
-                    <li>Currently Private extension in use for various projects and will be deployrd in Azure Marketplace as Infosys IP.</li>
-                  </ul>
+                  <p>Tools: AWS Device Farm, Siebel Repo Migration, Source to Image Toolkit, Arachni Scanner, Codescan, Node<br />
+                    Responsibilities & Tasks<br />
+                    Developing Custom Azure DevOps of Market place Extension in Node (Typescript)<br />
+                    Extension to be used as build and release tasks<br />
+                    Currently Private extension in use for various projects and will be deployrd in Azure Marketplace as Infosys IP.
+                  </p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
