--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="content text-center">
             <h1>Hi, I'm Sloka Roy!</h1>
 
-            <p class="lead">Cloud Developer at BXB Digital, A Brambles Company</p>
+            <p class="lead">Senior Cloud Developer at BXB Digital, A Brambles Company</p>
             <ul class="social-icon">
               <li><a href="https://www.linkedin.com/in/sloka-roy/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
               <li><a href="https://github.com/sholu"><i class="fa fa-github" aria-hidden="true"></i></a></li>
