Updated About me

--- a/index.html
+++ b/index.html
@@ -72,18 +72,9 @@
               </div>
               <div class="col-md-12">
                 <p>
-                  Hello World!! <br />
-                  As a DevOps Engineer with more than 4 years of experience, I have a strong understanding of software development life cycle (SDLC) and the ability to design, implement, and maintain continuous integration and delivery pipelines. I
-                  have a proven track record of collaborating with cross-functional teams to ensure seamless integration of infrastructure and applications, and to improve development processes and workflows.<br />
-
-                  My expertise includes proficiency in tools such as Git, Jenkins, Docker, Kubernetes, and AWS, among others. I possess the skills to automate and streamline development processes, manage and monitor infrastructure, and ensure that
-                  applications are highly available, scalable, and performant.<br />
-
-                  Additionally, I am well-versed in scripting languages such as Python, Bash, and Ruby, and have experience with infrastructure as code tools like Terraform and CloudFormation. I am also comfortable working in both Linux and Windows
-                  environments.<br />
-
-                  I am dedicated to ensuring that software development processes are optimized for efficiency, speed, and quality. I am a strong communicator, problem-solver, and collaborator who is passionate about staying up-to-date with the latest
-                  trends and technologies in DevOps. I am excited to bring my skills and experience to any organization seeking to improve their software development processes and infrastructure.
+                  I'm a Senior Cloud Developer with a passion for building secure, scalable, and efficient cloud-native systems. Over the past few years, I’ve designed and implemented critical infrastructure on AWS using EKS, Terraform, and Kubernetes, with a strong focus on automation, cost optimization, and system resilience. From setting up self-managed Kafka clusters to streamlining data pipelines with Airflow and MSK Connect, I bring a hands-on, problem-solving mindset to every project. <br />
+I thrive at the intersection of deep technical work and cross-team collaboration—whether it's helping data teams with observability, enabling developers with self-service tools, or driving DevOps transformation initiatives. I'm motivated by impact: making systems more reliable, reducing toil through automation, and supporting teams with the right tools and processes. <br />
+Curious by nature and always up for a challenge, I believe in continuous learning and take pride in mentoring peers, staying updated on emerging technologies, and contributing to long-term platform evolution. <br />
                 </p>
               </div>
             </div>
