--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
   </div>
   <!-- #main-wrapper -->
 
-  <!-- jquery -->
-  <script src="js/jquery-3.7.1.min.js"></script>
+  <!-- jquery (slim version for Bootstrap) -->
+  <script src="js/jquery-3.7.1.slim.min.js"></script>
 
   <!-- Bootstrap -->
   <script src="js/bootstrap.min.js"></script>
