--- a/index.html
+++ b/index.html
@@ -269,17 +269,19 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
               <div class="row">
                 <div class="col-md-6">
                   <div class="expertise-item">
-                    <h3>Cloud Infrastructure & Architecture</h3>
+                    <h3>Front End Development </h3>
+
                     <p>
-                      Designing and implementing scalable cloud infrastructure on AWS, with expertise in EKS, EC2, S3, RDS, and other AWS services. Skilled in infrastructure as code using Terraform and CloudFormation.
+                      Mostly integrated with other projects like Visualforce pages in salesforce or with J2EE
                     </p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="expertise-item">
-                    <h3>Kubernetes & Container Orchestration</h3>
+                    <h3>Android Application Development </h3>
+
                     <p>
-                      Managing containerized applications using Kubernetes, with experience in deployment strategies, service mesh, and cluster optimization for production workloads.
+                      My primary work area
                     </p>
                   </div>
                 </div>
@@ -288,18 +290,20 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
               <div class="row">
                 <div class="col-md-6">
                   <div class="expertise-item">
-                    <h3>Data Engineering & Streaming</h3>
+                    <h3>JAVA SE/EE</h3>
+
                     <p>
-                      Building and maintaining data pipelines using Apache Kafka, MSK Connect, and Airflow for real-time data processing and ETL workflows.
+                      Preferred language for coding DS and Algorithms, have also used it's versions with Android and Web based application
                     </p>
                   </div>
                 </div>
+
                 <div class="col-md-6">
                   <div class="expertise-item">
-                    <h3>DevOps & CI/CD</h3>
+                    <h3>Salesforce</h3>
+
                     <p>
-                      Implementing robust CI/CD pipelines using GitLab CI, GitHub Actions, and Jenkins for automated testing, deployment, and infrastructure provisioning.
-                    </p>
+                      Intermediate Knowledge with one full scale app for Banks</p>
                   </div>
                 </div>
               </div>
@@ -324,10 +328,10 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
                   <div class="progress-wrapper">
 
                     <div class="progress-item">
-                      <span class="progress-title">Cloud Services & Infrastructure (AWS, EKS, EC2, S3, Lambda, IAM)</span>
+                      <span class="progress-title">Computer Science (DBMS, OS, CN, DS, JAVA, ML, DW, BD)</span>
 
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"><span class="progress-percent"> 90%</span>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"><span class="progress-percent"> 75%</span>
                         </div>
                       </div>
                       <!-- .progress -->
@@ -336,10 +340,10 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
 
 
                     <div class="progress-item">
-                      <span class="progress-title">Container Technologies (Docker, Kubernetes, Helm, Service Mesh)</span>
+                      <span class="progress-title">Android Application Development (Android JAVA, xml, Firebase, Kotlin, TDD)</span>
 
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"><span class="progress-percent"> 85%</span>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"><span class="progress-percent"> 80%</span>
                         </div>
                       </div>
                       <!-- /.progress -->
@@ -348,10 +352,10 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
 
 
                     <div class="progress-item">
-                      <span class="progress-title">Infrastructure as Code (Terraform, CloudFormation, Ansible)</span>
+                      <span class="progress-title">Front End Development (HTML5, CSS3, JS, Bootstrap, sql JQuery, Git)</span>
 
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"><span class="progress-percent"> 65%</span>
                         </div>
                       </div>
                       <!-- /.progress -->
@@ -359,20 +363,20 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
                     <!-- /.skill-progress -->
 
                     <div class="progress-item">
-                      <span class="progress-title">Data Engineering (Kafka, Airflow, ETL, Data Pipelines)</span>
+                      <span class="progress-title">Salesforce (Apex)</span>
 
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"><span class="progress-percent"> 75%</span>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
                         </div>
                       </div>
                       <!-- /.progress -->
                     </div>
                     <!-- /.skill-progress -->
                     <div class="progress-item">
-                      <span class="progress-title">DevOps Practices (CI/CD, GitOps, Monitoring, Observability)</span>
+                      <span class="progress-title">Communication Skills (Microsoft Word/Powerpoint)</span>
 
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"><span class="progress-percent"> 85%</span>
+                        <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
                         </div>
                       </div>
                       <!-- .progress -->
@@ -402,31 +406,27 @@ Curious by nature and always up for a challenge, I believe in continuous learnin
               <div class="row">
                 <div class="col-md-12">
                   <div class="content-item">
-                    <small>Mar 2023 - Present</small>
-                    <h3>AWS Certified Solutions Architect - Professional</h3>
-                    <h4>Amazon Web Services</h4>
+                    <small>Jul 2017 - Present</small>
+                    <h3>Learning Path: Android: Test-Driven Android App Development</h3>
+                    <h4>Udemy, Packt Publishing.</h4>
+
                     <p>Online</p>
                   </div>
                   <!-- .experience-item -->
                   <div class="content-item">
-                    <small>Nov 2022 - Present</small>
-                    <h3>Certified Kubernetes Administrator (CKA)</h3>
-                    <h4>Cloud Native Computing Foundation</h4>
-                    <p>Online</p>
+                    <small>Jun 2016 - Present</small>
+                    <h3>Sales Force App Builder</h3>
+                    <h4>AlmaMate Info Tech</h4>
+
+                    <p>NIEC, New Delhi</p>
                   </div>
                   <!-- .experience-item -->
                   <div class="content-item">
-                    <small>Apr 2021 - Present</small>
-                    <h3>HashiCorp Certified: Terraform Associate</h3>
-                    <h4>HashiCorp</h4>
-                    <p>Online</p>
-                  </div>
-                  <!-- .experience-item -->
-                  <div class="content-item">
-                    <small>Sep 2020 - Present</small>
-                    <h3>AWS Certified DevOps Engineer - Professional</h3>
-                    <h4>Amazon Web Services</h4>
-                    <p>Online</p>
+                    <small>Aug 2015 - Present</small>
+                    <h3>Android App Development (Summer Training/ Internship)</h3>
+                    <h4>Times Globacom (P) Ltd.</h4>
+
+                    <p>Hauz Khas, New Delhi</p>
                   </div>
                   <!-- .experience-item -->
                 </div>
