Open Social links in new tab

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
             <p class="lead">Senior Cloud Developer at BXB Digital, A Brambles Company</p>
             <ul class="social-icon">
-              <li><a href="https://www.linkedin.com/in/sloka-roy/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-              <li><a href="https://github.com/sholu"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-              <li><a href="https://stackoverflow.com/users/8272710/sloka-roy"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.facebook.com/slokaroy1"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="https://twitter.com/roy_sloka"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/sloka-roy/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/sholu" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+              <li><a href="https://stackoverflow.com/users/8272710/sloka-roy" target="_blank" rel="noopener noreferrer"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/slokaroy1" target="_blank" rel="noopener noreferrer"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a href="https://twitter.com/roy_sloka" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
             </ul>
           </div>
           <div class="profile-img"></div>
